--- a/PubBall/res/layout/activity_game_layout.xml
+++ b/PubBall/res/layout/activity_game_layout.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameActivity" >
+    tools:context=".GameActivity"
+    android:id="@+id/gameLayout"  >
 
 </RelativeLayout>
